Add jansi dependency for progress bars and console colors